# Helody

./: .flake8  .pre-commit-config.yaml  Helody.py  README.md  __version__.py  main.py  pyproject.toml  requirements.txt
Components/: __init__.py
Components/Common/: Button.py  ImageLabel.py  Margin.py  Menu.py  MenuButton.py  Seperator.py  Slider.py  Text.py  __init__.py
Components/Home/: HomeButton.py  MiniButton.py
Core/: Database.py  PlayList.py  Player.py  Settings.py  View.py  Window.py  __init__.py
DB/: helody.db  helody.sqlite
Models/: Playlist.py  PlaylistSong.py  Playlists.py  Setting.py  Song.py  __init__.py
OLD/: HelodyOld.py  helodySqliteDB.py  requirements.txt
OLD/lib/models/: wrapper.py
OLD/lib/resources/: About.txt  Licence.txt  OldList.json  afterinfo.txt  argv.txt  beforeinfo.txt  index.File  listImgs.json  mwd.File
Util/: Styles.py  UI.py  __init__.py
Views/: HomeView.py  __init__.py
Views/Home/: HomeView.py
Views/Playlists/: PlayListsView.py
lib/: __init__.py
lib/res/: ColorTheme.py  Database.py  Images.py  Locale.py  __init__.py
lib/res/lang/: enUS.json  siLK.json
